WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149224
[iOS] Inline implementation of -[WKImagePreviewViewController previewActions]
https://bugs.webkit.org/show_bug.cgi?id=149224
Summary
[iOS] Inline implementation of -[WKImagePreviewViewController previewActions]
mitz
Reported
2015-09-16 11:12:00 PDT
[iOS] Inline implementation of -[WKImagePreviewViewController previewActions]
Attachments
Add -previewActions
(2.59 KB, patch)
2015-09-16 12:02 PDT
,
mitz
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2015-09-16 12:02:38 PDT
Created
attachment 261321
[details]
Add -previewActions
WebKit Commit Bot
Comment 2
2015-09-16 12:05:03 PDT
Attachment 261321
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/WKImagePreviewViewController.mm:99: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2015-09-16 12:52:46 PDT
Committed <
http://trac.webkit.org/r189877
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug