[iOS] Inline implementation of -[WKImagePreviewViewController previewActions] https://bugs.webkit.org/show_bug.cgi?id=149224

Reviewed by Tim Horton.

* Platform/spi/ios/UIKitSPI.h: Declare UIViewControllerPreviewAction and its factory method.
* UIProcess/WKImagePreviewViewController.mm:
(-[WKImagePreviewViewController previewActions]): Moved here.



Canonical link: https://commits.webkit.org/167330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189877 268f45cc-cd09-0410-ab3c-d52691b4dbfc